fix vtm_add_offset yday on last day of year.

* time.c (vtm_add_offset): Fix yday on last day of year.
  [ruby-core:72878] [Bug #11994] Fixed by Andrew White.



git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@56599 b2dd03c8-39d4-4d8f-98ff-823fe69b080e